gke_manifest/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: halyard
---
apiVersion: v1
kind: Namespace
metadata:
  name: spinnaker
