gke_manifest/api_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "spinnaker-api-ingress-address"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: spin-gate
      port:
        number: 8084
