gke_manifest/gui_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deck-ingress
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "spinnaker-gui-ingress-address"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: spin-deck
      port:
        number: 9000
